@@ -17,9 +17,7 @@
         "prerender-dev": "node ./seo/list-url-scripts.js --dev && ng run wonder-scale-website:prerender --routesFile ./seo/routes.txt && node ./seo/update-meta-data.js --dev",
         "prerender-testing": "node ./seo/list-url-scripts.js --testing && ng run wonder-scale-website:prerender --routesFile ./seo/routes.txt && node ./seo/update-meta-data.js --testing",
         "deploy": "npm run prerender && openode deploy -t 83371eaa7faa67ba8521d3df5fe655ea -s ws-website",
-        "deploy-testing": "npm run prerender-testing && openode deploy -t 83371eaa7faa67ba8521d3df5fe655ea",
-        "deploy-sync": "npm run prerender-testing && openode sync -t 83371eaa7faa67ba8521d3df5fe655ea -s ws-website",
-        "deploy-testing-sync": "npm run prerender-testing && openode sync -t 83371eaa7faa67ba8521d3df5fe655ea"
+        "deploy-testing": "npm run prerender-testing && openode deploy -t 83371eaa7faa67ba8521d3df5fe655ea -s testing-website"
     },
     "engines": {
         "node": "10.22.0",
