@@ -36,6 +36,21 @@
         margin-right: auto;
         border-radius: 20px;
         overflow: hidden;
-        box-shadow: 0 3px 6px rgba(0, 0, 0, .16);
+    }
+}
+
+.dropdown-item {
+    &.selected,
+    &:hover {
+        color: #000;
+        background-color: #ebecf0;
+    }
+}
+
+@media (max-width: 768px) {
+    .order {
+        .order__icon {
+            display: block;
+        }
     }
 }
