@@ -8,6 +8,7 @@
 ---------------------------------------------
 .: WSW: BugFix - Not able to navigate to other page when invoice is not found (WSW-106)
 .: WSW: Task - Add mobile size supported for order (WSW-105)
+.: WSW: BugFix - Display hover remove icon in mobile size (WSW-100)
 
 ---------------------------------------------
 - 2021-05-06                                -
